--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "build": "esbuild ./apps/web/assets/javascripts/Index.js --bundle --outfile=./public/assets/build.js --loader:.js=jsx --watch"
+    "build": "esbuild ./apps/web/assets/javascripts/Index.js --bundle --outfile=./apps/web/assets/javascripts/compiled/build.js --loader:.js=jsx",
+    "dev": "esbuild ./apps/web/assets/javascripts/Index.js --bundle --outfile=./apps/web/assets/javascripts/compiled/build.js --loader:.js=jsx --watch"
   },
   "devDependencies": {}
 }
